@@ -4,6 +4,7 @@ Ulf Zibis <Ulf.Zibis@CoSoCo.de>
 * Cleared source code.
 * Merged duplicate code.
 * Freed heap memory.
+* Fixed bug, if PC directory could not be created.
 
 Version 0.2.1   Jul 22, 2022
 Ulf Zibis <Ulf.Zibis@CoSoCo.de>
